<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004D66"
    tools:context=".LoginActivity">

    <LinearLayout
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="40dp"
        android:background="#F3EDED"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView16"
            android:layout_width="104dp"
            android:layout_height="30dp"
            android:layout_marginStart="102dp"
            android:layout_marginEnd="102dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/login_form"
            android:textColor="#8BC34A"
            android:textSize="20sp"
            android:textStyle="bold|italic" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/diagnostic_lab_reportingn_system"
            android:textColor="#00BCD4"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#8BC34A"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">


            <RadioButton
                android:checked="true"
                android:id="@+id/radioAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/admin"
                android:textColor="#00BCD4"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <RadioButton
                android:id="@+id/radioPatient"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/patient"
                android:textColor="#00BCD4" />

            <RadioButton
                android:id="@+id/radioLab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/lab"
                android:textColor="#00BCD4" />


        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"

            android:text="@string/email1"
            android:textColor="#00BCD4" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="#8BC34A"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#8BC34A"
            android:textColorHighlight="#00BCD4"
            android:textColorHint="#00BCD4"
            android:textColorLink="#00BCD4"
            tools:ignore="Autofill,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="#00BCD4" />

        <EditText
            android:textColor="#8BC34A"
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="#8BC34A"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


        <Button
            android:id="@+id/button"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
             android:text="@string/login1" />


        <TextView
            android:id="@+id/textViewNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/no_account"
            android:textColor="#00BCD4" />

    </LinearLayout>


</RelativeLayout>
